compiler/testData/diagnostics/tests/inference/expectedTypeWithGenerics.kt
// !LANGUAGE: +ExpectedTypeFromCast

class X<S> {
    fun <T : S> foo(): T = TODO()
}

fun test(x: X<Number>) {
    konst y = x.foo() as Int
}

fun <S, D: S> g() {
    fun <T : S> foo(): T = TODO()

    konst y = <!TYPE_MISMATCH!>foo<!>() as Int

    konst y2 = foo() as D
}
